--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
 
     <div class="main">
         <div class="back">
-            <img src="/IMG_7564.JPG" alt="">
-            <img src="/IMG_7565.JPG" alt="">
-            <img src="/IMG_7566.JPG" alt="">
-            <img src="/IMG_7567.JPG" alt="">
-            <img src="/IMG_7568.JPG" alt="">
+            <img src="/images/IMG_7564.webp" alt="">
+            <img src="/images/IMG_7565.webp" alt="">
+            <img src="/images/IMG_7566.webp" alt="">
+            <img src="/images/IMG_7567.webp" alt="">
+            <img src="/images/IMG_7568.webp" alt="">
         </div>
         <div class="top">
             <div class="workingarea">
                 <header>
                     <figure class="logo">
-                        <img src="/raybanlogo.png" alt="rayban">
+                        <img src="/images/raybanlogo.webp" alt="rayban">
                         <li><a href="#">products</a></li>
                         <li><a href="#">about</a></li>
                     </figure>
@@ -73,7 +73,7 @@
                     <div class="right">
                         <p>Lorem ipsum dolor sit amet.</p>
                         <figure class="container">
-                            <img src="/IMG_7564.JPG" alt="rayban">
+                            <img src="/images/IMG_7564.webp" alt="rayban">
                         </figure>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis doloremque iure deserunt,
                             officia animi, excepturi alias omnis quisquam laboriosam recusandae!</p>
